# paperfs.rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  buildkite.yaml  flake.nix  paperfs.container
src/: axum_handler.rs  buf_layer.rs  dav.rs  fail_case.rs  main.rs  mux_layer.rs  odrive.rs  odrive_handler.rs  types.rs  uninit_svc.rs  utils.rs
static/: index.html
